syntax = "proto3";

package hello_proto;

service Hello {
  rpc sayHello (HelloRequest) returns (HelloResponse) {};
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
}

message HelloResponse {
  string message = 1;
}
